--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <h2>Hi, I  am</h2>
                 <h1>Mary Hardy</h1>
                 <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <div>
+                <div class="banner-button">
                     <button class="btn"><i class="fa-solid fa-download"></i>Download CV</button>
                     <button class="btn"><i class="fa-solid fa-phone"></i>Contact</button>
                 </div>
@@ -97,7 +97,7 @@
         </div>
     </section>
 
-    <section id="resume">
+    <section>
         <div class="section-heading">
             <h2>A summary of My Resume</h2>
         </div>
